--- a/src/style/services.block.scss
+++ b/src/style/services.block.scss
@@ -1,7 +1,9 @@
 @media only screen and (max-width:1199px){
   .services-block{
     position:relative;
-
+.title-box{
+  margin-top: 16px;
+}
     .back-box-services{
       cursor:pointer;
       position:absolute;
