--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1103,8 +1103,7 @@ body{
     text-align: center;
     z-index: 0;
     min-height: 32px;
-    margin-top: 16px;
-    .line{
+     .line{
       background:#dcdfe2;
       height:1.0px;
       left:0;
@@ -1656,7 +1655,7 @@ body{
     background:#FFFFFF;
     border-radius:8px;
     box-shadow:0 -2px 1px rgba(85, 89, 106, 0.0196802), 0 2px 1px rgba(85, 89, 106, 0.0196802), 0 4px 2px rgba(85, 89, 106, 0.0282725), 0 6px 4px rgba(85, 89, 106, 0.035), 0 8px 8px rgba(85, 89, 106, 0.0417275), 0 18px 16px rgba(85, 89, 106, 0.0503198), 0 30px 40px rgba(85, 89, 106, 0.07);
-    height:315px;
+    height: 332px;
     margin-bottom:32px;
     position:relative;
     width:960px;
@@ -1670,6 +1669,8 @@ body{
         font-size:26px;
         font-weight:bold;
         line-height:32px;
+        position:relative;
+        height: 32px;
       }
       .contacts{
         display:inline-block;
