--- a/src/style/popup.room.info.scss
+++ b/src/style/popup.room.info.scss
@@ -1,189 +1,326 @@
-.popup-room-info {
-  transform: translate3d(0px, 0px, 0px);
-  -o-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: fixed;
-  width: 796px;
-  margin: 0 auto;
-  z-index: 100;
-  top: 38px;
-  left: 29%;
-  .decorate {
-    position: absolute;
-    width: 796px;
-    height: 1100px;
-    /* White */
-    background: #FFFFFF;
-    /* 30 dp */
-    box-shadow: 0px -2px 1px rgba(85, 89, 106, 0.0196802), 0px 2px 1px rgba(85, 89, 106, 0.0196802), 0px 4px 2px rgba(85, 89, 106, 0.0282725), 0px 6px 4px rgba(85, 89, 106, 0.035), 0px 8px 8px rgba(85, 89, 106, 0.0417275), 0px 18px 16px rgba(85, 89, 106, 0.0503198), 0px 30px 40px rgba(85, 89, 106, 0.07);
-    border-radius: 8px;
-  }
-  .close-btn {
-    @extend .clickable;
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    left: 736px;
-    top: 36px;
-    background: url(../static/close-icon.svg) no-repeat center;
-  }
-  .title {
-    position: absolute;
-    width: 556px;
-    height: 32px;
-    top: 32px;
-    left: 32px;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 26px;
-    line-height: 32px;
-    /* identical to box height, or 123% */
-    display: flex;
-    align-items: center;
-    /* Black */
-    color: #2F486A;
-  }
-  .short-info {
-    position: absolute;
-    width: 641px;
-    height: 52px;
-    top: 96px;
-    left: 32px;
-    .area-title {
-      position: absolute;
-      width: 69px;
-      height: 24px;
-      font-family: Inter;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 24px;
-      /* identical to box height, or 171% */
-      display: flex;
-      align-items: center;
-      /* Second Black */
-      color: rgba(47, 72, 106, 0.75);
+@media only screen and (max-width:1199px){
+  .popup-room-info{
+    transform:translate3d(0px, 0px, 0px);
+    -o-backface-visibility:hidden;
+    -moz-backface-visibility:hidden;
+    -webkit-backface-visibility:hidden;
+    backface-visibility:hidden;
+    position:absolute;
+    width:328px;
+    margin:0 auto;
+    z-index:100;
+    top:38px;
+    left:29%;
+    font-family:Inter;
+    font-style:normal;
+    color:rgba(47, 72, 106, 0.75);
+    box-shadow:0px -2px 1px rgba(85, 89, 106, 0.0196802), 0px 2px 1px rgba(85, 89, 106, 0.0196802), 0px 4px 2px rgba(85, 89, 106, 0.0282725), 0px 6px 4px rgba(85, 89, 106, 0.035), 0px 8px 8px rgba(85, 89, 106, 0.0417275), 0px 18px 16px rgba(85, 89, 106, 0.0503198), 0px 30px 40px rgba(85, 89, 106, 0.07);
+    border-radius:8px;
+    background:#FFFFFF;
+    .close-btn{
+      cursor:pointer;
+      position:absolute;
+      width:24px;
+      height:24px;
+      left:284px;
+      top:36px;
+      background:url(../static/close-icon.svg) no-repeat center;
     }
-    .area-value {
-      position: absolute;
-      width: 53px;
-      height: 24px;
-      left: 148px;
-      font-family: Inter;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 24px;
-      /* identical to box height, or 171% */
-      display: flex;
-      align-items: center;
+    .title{
+      position:relative;
+      width:245px;
+      padding-top:32px;
+      left:16px;
+      font-weight:600;
+      font-size:18px;
+      line-height:28px;
+      color:#2F486A;
+      display:block;
+    }
+    .short-info{
+      position:relative;
+      width:296px;
+      display:block;
+      padding-top:50px;
+      .area-title{
+        position:relative;
+        width:245px;
+        left:16px;
+        font-size:12px;
+        line-height:24px;
+        display:block;
+      }
+      .area-value{
+        position:relative;
+        width:53px;
+        left:16px;
+        font-size:12px;
+        line-height:20px;
+        display:block;
+      }
+      .people-count-title{
+        padding-top:14px;
+        position:relative;
+        width:99px;
+        left:16px;
+        font-size:12px;
+        line-height:20px;
+        display:block;
+      }
+      .people-count-value{
+        position:relative;
+        display:block;
+        width:296px;
+        left:16px;
+        font-size:12px;
+        line-height:20px;
+      }
+    }
+    .description{
+      padding-top:14px;
+      position:relative;
+      display:block;
+      width:296px;
+      left:16px;
+      font-size:12px;
+      line-height:20px;
+    }
+    .room-comfort-item{
+      position:relative;
+      left:16px;
+      margin-bottom:45px;
+      .title{
+        position:relative;
+        font-weight:bold;
+        font-size:14px;
+        line-height:20px;
+        color:#2F486A;
+      }
+      .point-col{
+        font-size:14px;
+        line-height:24px;
+        color:#2F486A;
+        display:inline-block;
+        padding:0px;
+        position:relative;
+        width:235px;
+        height:24px;
+        &:before{
+          display:inline-block;
+          position:relative;
+          content:'';
+          width:24px;
+          height:24px;
+          background:url(../static/star.svg) no-repeat center;
+          margin-right:12px;
+          top:6px
+        }
+      }
+    }
+  }
+}
+@media only screen and (min-width:1200px){
+  .popup-room-info{
+    transform:translate3d(0px, 0px, 0px);
+    -o-backface-visibility:hidden;
+    -moz-backface-visibility:hidden;
+    -webkit-backface-visibility:hidden;
+    backface-visibility:hidden;
+    position:fixed;
+    width:796px;
+    margin:0 auto;
+    z-index:100;
+    top:38px;
+    left:29%;
+    .decorate{
+      position:absolute;
+      width:796px;
+      height:1100px;
+      /* White */
+      background:#FFFFFF;
+      /* 30 dp */
+      box-shadow:0px -2px 1px rgba(85, 89, 106, 0.0196802), 0px 2px 1px rgba(85, 89, 106, 0.0196802), 0px 4px 2px rgba(85, 89, 106, 0.0282725), 0px 6px 4px rgba(85, 89, 106, 0.035), 0px 8px 8px rgba(85, 89, 106, 0.0417275), 0px 18px 16px rgba(85, 89, 106, 0.0503198), 0px 30px 40px rgba(85, 89, 106, 0.07);
+      border-radius:8px;
+    }
+    .close-btn{
+      cursor:pointer;
+      position:absolute;
+      width:24px;
+      height:24px;
+      left:736px;
+      top:36px;
+      background:url(../static/close-icon.svg) no-repeat center;
+    }
+    .title{
+      position:absolute;
+      width:556px;
+      height:32px;
+      top:32px;
+      left:32px;
+      font-style:normal;
+      font-weight:600;
+      font-size:26px;
+      line-height:32px;
+      /* identical to box height, or 123% */
+      display:flex;
+      align-items:center;
       /* Black */
-      color: #2F486A;
+      color:#2F486A;
     }
-    .people-count-title {
-      position: absolute;
-      width: 99px;
-      height: 24px;
-      left: 0px;
-      top: 28px;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 24px;
-      /* identical to box height, or 171% */
-      display: flex;
-      align-items: center;
-      /* Second Black */
-      color: rgba(47, 72, 106, 0.75);
+    .short-info{
+      position:absolute;
+      width:641px;
+      height:52px;
+      top:96px;
+      left:32px;
+      .area-title{
+        position:absolute;
+        width:69px;
+        height:24px;
+        font-family:Inter;
+        font-style:normal;
+        font-weight:500;
+        font-size:14px;
+        line-height:24px;
+        /* identical to box height, or 171% */
+        display:flex;
+        align-items:center;
+        /* Second Black */
+        color:rgba(47, 72, 106, 0.75);
+      }
+      .area-value{
+        position:absolute;
+        width:53px;
+        height:24px;
+        left:148px;
+        font-family:Inter;
+        font-style:normal;
+        font-weight:500;
+        font-size:14px;
+        line-height:24px;
+        /* identical to box height, or 171% */
+        display:flex;
+        align-items:center;
+        /* Black */
+        color:#2F486A;
+      }
+      .people-count-title{
+        position:absolute;
+        width:99px;
+        height:24px;
+        left:0px;
+        top:28px;
+        font-style:normal;
+        font-weight:500;
+        font-size:14px;
+        line-height:24px;
+        /* identical to box height, or 171% */
+        display:flex;
+        align-items:center;
+        /* Second Black */
+        color:rgba(47, 72, 106, 0.75);
+      }
+      .people-count-value{
+        position:absolute;
+        width:493px;
+        height:24px;
+        left:148px;
+        top:28px;
+        font-style:normal;
+        font-weight:500;
+        font-size:14px;
+        line-height:24px;
+        /* identical to box height, or 171% */
+        display:flex;
+        align-items:center;
+        /* Black */
+        color:#2F486A;
+      }
     }
-    .people-count-value {
-      position: absolute;
-      width: 493px;
-      height: 24px;
-      left: 148px;
-      top: 28px;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 24px;
-      /* identical to box height, or 171% */
-      display: flex;
-      align-items: center;
+    .description{
+      position:absolute;
+      width:714px;
+      height:240px;
+      left:32px;
+      top:180px;
+      font-style:normal;
+      font-weight:500;
+      font-size:14px;
+      line-height:24px;
+      /* or 171% */
+      display:flex;
+      align-items:center;
       /* Black */
-      color: #2F486A;
+      color:#2F486A;
     }
-  }
-  .description {
-    position: absolute;
-    width: 714px;
-    height: 240px;
-    left: 32px;
-    top: 180px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
-    /* or 171% */
-    display: flex;
-    align-items: center;
-    /* Black */
-    color: #2F486A;
-  }
-  .room-comfort-item {
-    position: relative;
-    left: 32px;
-    top: 452px;
-    margin-bottom: 45px;
-    .title {
-      position: absolute;
-      height: 20px;
-      left: 0px;
-      top: 0px;
-      font-family: Inter;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 16px;
-      line-height: 20px;
-      /* identical to box height, or 125% */
-      /* Black */
-      color: #2F486A;
-    }
-    .font {
-      font-family: Inter;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 24px;
-      /* identical to box height, or 171% */
-      display: flex;
-      align-items: center;
-      /* Black */
-      color: #2F486A;
-      /* Inside Auto Layout */
-      flex: none;
-      order: 1;
-      align-self: center;
-      margin: 12px 0px;
-    }
-    .point-col {
-      @extend .font;
-      display: inline-block;
-      padding: 0px;
-      position: relative;
-      width: 235px;
-      height: 24px;
-      top: 20px;
-      &:before{
-        display: inline-block;
-        position: relative;
-        content: '';
-        width: 24px;
-        height: 24px;
-        background: url(../static/star.svg) no-repeat center;
-        margin-right: 12px;
-        top:6px
+    .room-comfort-item{
+      position:relative;
+      left:32px;
+      top:452px;
+      margin-bottom:45px;
+      .title{
+        position:absolute;
+        height:20px;
+        left:0px;
+        top:0px;
+        font-family:Inter;
+        font-style:normal;
+        font-weight:bold;
+        font-size:16px;
+        line-height:20px;
+        /* identical to box height, or 125% */
+        /* Black */
+        color:#2F486A;
+      }
+      .font{
+        font-family:Inter;
+        font-style:normal;
+        font-weight:500;
+        font-size:14px;
+        line-height:24px;
+        /* identical to box height, or 171% */
+        display:flex;
+        align-items:center;
+        /* Black */
+        color:#2F486A;
+        /* Inside Auto Layout */
+        flex:none;
+        order:1;
+        align-self:center;
+        margin:12px 0px;
+      }
+      .point-col{
+        font-family:Inter;
+        font-style:normal;
+        font-weight:500;
+        font-size:14px;
+        line-height:24px;
+        /* identical to box height, or 171% */
+        display:flex;
+        align-items:center;
+        /* Black */
+        color:#2F486A;
+        /* Inside Auto Layout */
+        flex:none;
+        order:1;
+        align-self:center;
+        margin:12px 0px;
+        display:inline-block;
+        padding:0px;
+        position:relative;
+        width:235px;
+        height:24px;
+        top:20px;
+        &:before{
+          display:inline-block;
+          position:relative;
+          content:'';
+          width:24px;
+          height:24px;
+          background:url(../static/star.svg) no-repeat center;
+          margin-right:12px;
+          top:6px
+        }
       }
     }
   }
