--- a/src/style/pay.parameters.scss
+++ b/src/style/pay.parameters.scss
@@ -60,7 +60,7 @@
           font-weight:500;
           font-size:14px;
           line-height:20px;
-          color:rgba(47, 72, 106, 0.5);
+          color: #2F486A;
           border:none;
         }
       }
@@ -443,7 +443,7 @@
             font-weight:normal;
             font-size:14px;
             line-height:20px;
-            color:rgba(47, 72, 106, 0.5);
+            color: #2F486A;
             height:66px;
             width:272px;
             resize:none;
@@ -741,8 +741,9 @@
           line-height:20px;
           display:flex;
           align-items:center;
-          color:rgba(47, 72, 106, 0.5);
+          color: #2F486A;
           border:none;
+
         }
       }
       .contacts-block{
@@ -1212,7 +1213,7 @@
             line-height:20px;
             display:flex;
             align-items:center;
-            color:rgba(47, 72, 106, 0.5);
+            color: #2F486A;
             height:73%;
             width:94%;
             resize:none;
