--- a/src/style/paying.scss
+++ b/src/style/paying.scss
@@ -51,10 +51,11 @@
         font-weight:500;
         font-size:12px;
         line-height:20px;
-        color:rgba(47, 72, 106, 0.5);
+        color: #2F486A;
         left: -2px;
         margin-top:12px;
         margin-bottom: 16px;
+        color: #2F486A;
       }
       .line{
         position:relative;
@@ -76,7 +77,7 @@
         font-weight:500;
         font-size:12px;
         line-height:20px;
-        color:rgba(47, 72, 106, 0.5);
+        color: #2F486A;
         left: -2px;
         margin-top:12px;
       }
@@ -112,6 +113,7 @@
         text-transform:uppercase;
         width:164px;
         margin-top: 12px;
+        color: #2F486A;
       }
       .credit-card-exp{
         position: absolute;
@@ -230,7 +232,7 @@
         line-height:20px;
         display:flex;
         align-items:center;
-        color:rgba(47, 72, 106, 0.5);
+        color: #2F486A;
       }
       .line{
         position:absolute;
@@ -263,7 +265,7 @@
         line-height:20px;
         display:flex;
         align-items:center;
-        color:rgba(47, 72, 106, 0.5);
+        color: #2F486A;
       }
     }
     .credit-card{
@@ -303,6 +305,7 @@
         left:242px;
         top:18px;
         width:191px;
+        color: #2F486A;
       }
       .credit-card-exp{
         position:absolute;
