--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -39,7 +39,7 @@ body{
   background: rgba(29, 42, 61, 0.85);
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   z-index: 10;
   top: 0px;
   left: 0px;
