--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,12 +5,12 @@
   width:960px;
 }
 .mobile-version{
-  display: none;
+  display:none;
 }
 body{
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  font-family:Inter;
+  font-style:normal;
+  font-weight:normal;
 }
 @import "slick.path";
 @import "popup-select-guest";
@@ -35,32 +35,32 @@ body{
   box-shadow:none;
 }
 .hide-doc{
-  display: none;
-  background: rgba(29, 42, 61, 0.85);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 10;
-  top: 0px;
-  left: 0px;
+  display:none;
+  background:rgba(29, 42, 61, 0.85);
+  width:100%;
+  height:100%;
+  position:fixed;
+  z-index:10;
+  top:0px;
+  left:0px;
 }
 .clear-href{
-  text-decoration: none;
+  text-decoration:none;
 }
 @media screen and (max-width:1199px){
-.desktop-only{
-  display: none;
-}
+  .desktop-only{
+    display:none;
+  }
   .mobile-tooltip{
-    display: none;
-    position: absolute;
-    width: 300px;
-    z-index: 10;
-    background: #FFFFFF;
-    box-shadow: 0px -2px 1px rgba(85, 89, 106, 0.0196802), 0px 2px 1px rgba(85, 89, 106, 0.0196802), 0px 4px 2px rgba(85, 89, 106, 0.0282725), 0px 6px 4px rgba(85, 89, 106, 0.035), 0px 8px 8px rgba(85, 89, 106, 0.0417275), 0px 18px 16px rgba(85, 89, 106, 0.0503198), 0px 30px 40px rgba(85, 89, 106, 0.07);
-    border-radius: 8px;
-    padding: 14px;
-    min-height: 24px;
+    display:none;
+    position:absolute;
+    width:300px;
+    z-index:10;
+    background:#FFFFFF;
+    box-shadow:0px -2px 1px rgba(85, 89, 106, 0.0196802), 0px 2px 1px rgba(85, 89, 106, 0.0196802), 0px 4px 2px rgba(85, 89, 106, 0.0282725), 0px 6px 4px rgba(85, 89, 106, 0.035), 0px 8px 8px rgba(85, 89, 106, 0.0417275), 0px 18px 16px rgba(85, 89, 106, 0.0503198), 0px 30px 40px rgba(85, 89, 106, 0.07);
+    border-radius:8px;
+    padding:14px;
+    min-height:24px;
     .close-btn{
       cursor:pointer;
       position:absolute;
@@ -259,7 +259,7 @@ body{
       height:90px;
       position:absolute;
       right:16px;
-      top:327px;
+      top:318px;
       width:64px;
     }
   }
@@ -501,18 +501,18 @@ body{
           width:24px;
         }
         .calendar-window{
-          background: #FFFFFF;
-          border-radius: 8px;
-          box-shadow: 0 2px 1px rgba(85, 89, 106, 0.0196802), 0 4px 2px rgba(85, 89, 106, 0.0282725), 0 6px 4px rgba(85, 89, 106, 0.035), 0 8px 8px rgba(85, 89, 106, 0.0417275), 0 18px 16px rgba(85, 89, 106, 0.0503198), 0 30px 40px rgba(85, 89, 106, 0.07);
-          height: 494px;
-          position: absolute;
-          top: 55px;
-          width: 423px;
-          -moz-transform: scale(0.8);
-          transform-origin: 50% 0;
-          z-index: 1;
-          zoom: 80%;
-          left: -46px;
+          background:#FFFFFF;
+          border-radius:8px;
+          box-shadow:0 2px 1px rgba(85, 89, 106, 0.0196802), 0 4px 2px rgba(85, 89, 106, 0.0282725), 0 6px 4px rgba(85, 89, 106, 0.035), 0 8px 8px rgba(85, 89, 106, 0.0417275), 0 18px 16px rgba(85, 89, 106, 0.0503198), 0 30px 40px rgba(85, 89, 106, 0.07);
+          height:494px;
+          position:absolute;
+          top:55px;
+          width:423px;
+          -moz-transform:scale(0.8);
+          transform-origin:50% 0;
+          z-index:1;
+          zoom:80%;
+          left:-46px;
           .month-list-decorate{
             background:#FAFBFC;
             border-radius:8px 8px 0 0;
@@ -1085,7 +1085,6 @@ body{
     top:8px;
   }
   .tooltip{
-
     --width:250px;
     display:none;
     height:40px;
@@ -1141,12 +1140,12 @@ body{
     width:360px;
   }
   .title-box{
-    display: block;
-    position: relative;
-    text-align: center;
-    z-index: 0;
-    min-height: 32px;
-     .line{
+    display:block;
+    position:relative;
+    text-align:center;
+    z-index:0;
+    min-height:32px;
+    .line{
       background:#dcdfe2;
       height:1.0px;
       left:0;
@@ -1157,57 +1156,57 @@ body{
     }
     .title{
       &:before{
-        display: inline-block;
-        content: '';
-        background-image: linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
+        display:inline-block;
+        content:'';
+        background-image:linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
         width:16px;
       }
       &:after{
-        display: inline-block;
-        content: '';
-        background-image: linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
+        display:inline-block;
+        content:'';
+        background-image:linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
         width:16px;
       }
-      background-image: linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
-      color: rgba(47, 72, 106, 0.24);
-      font-size: 14px;
-      font-weight: 600;
-      line-height: 32px;
-      margin: 0 auto;
-      padding: 12px 0px;
-      position: relative;
-      z-index: -1;
-      display: flex;
-      white-space: nowrap;
-      width: max-content;
+      background-image:linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
+      color:rgba(47, 72, 106, 0.24);
+      font-size:14px;
+      font-weight:600;
+      line-height:32px;
+      margin:0 auto;
+      padding:12px 0px;
+      position:relative;
+      z-index:-1;
+      display:flex;
+      white-space:nowrap;
+      width:max-content;
     }
-    img.mobile-version.back-btn {
-      cursor: pointer;
-      position: absolute;
-      display: block;
-      left: 16px;
-      top: 1px;
+    img.mobile-version.back-btn{
+      cursor:pointer;
+      position:absolute;
+      display:block;
+      left:16px;
+      top:1px;
     }
-    img.mobile-version.next-btn {
-      cursor: pointer;
-      position: absolute;
-      display: block;
-      right: 16px;
-      transform: rotate(180deg);
-      top: 1px;
+    img.mobile-version.next-btn{
+      cursor:pointer;
+      position:absolute;
+      display:block;
+      right:16px;
+      transform:rotate(180deg);
+      top:1px;
     }
   }
   .help-icon{
-    background: url(../static/help.svg) no-repeat center;
-    background-size: contain;
-    content: '';
-    height: 16px;
-    margin-left: 6px;
-    width: 16px;
-    position: absolute;
-    right: -23px;
-    zoom: 111%;
-    -moz-transform: scale(1.111);
+    background:url(../static/help.svg) no-repeat center;
+    background-size:contain;
+    content:'';
+    height:16px;
+    margin-left:6px;
+    width:16px;
+    position:absolute;
+    right:-23px;
+    zoom:111%;
+    -moz-transform:scale(1.111);
     &:hover{
       background:url(../static/help-hover.svg) no-repeat center;
       background-size:contain;
@@ -1219,23 +1218,23 @@ body{
   .man-icon{
     align-self:center;
     background:url(../static/man.svg) no-repeat center;
-    height: 15px;
-    width: 15px;
-    background-size: 7px;
+    height:15px;
+    width:15px;
+    background-size:7px;
   }
   .plus-icon{
     align-self:center;
     background:url(../static/plus.svg) no-repeat center;
-    height: 15px;
-    width: 15px;
-    background-size: 7px;
+    height:15px;
+    width:15px;
+    background-size:7px;
   }
   .child-icon{
     align-self:center;
     background:url(../static/child.svg) no-repeat center bottom;
-    height: 15px;
-    width: 15px;
-    background-size: 7px;
+    height:15px;
+    width:15px;
+    background-size:7px;
   }
   input[type=checkbox]{
     &:before{
@@ -1261,19 +1260,19 @@ body{
     width:253px;
   }
   .copyright{
-    align-items: center;
-    color: rgba(47, 72, 106, 0.5);
-    display: flex;
-    font-size: 12px;
-    font-weight: 500;
-    height: 24px;
-    justify-content: center;
-    line-height: 24px;
-    margin-top: 18px;
-    position: relative;
-    text-align: center;
-    text-transform: uppercase;
-    width: 100%;
+    align-items:center;
+    color:rgba(47, 72, 106, 0.5);
+    display:flex;
+    font-size:12px;
+    font-weight:500;
+    height:24px;
+    justify-content:center;
+    line-height:24px;
+    margin-top:18px;
+    position:relative;
+    text-align:center;
+    text-transform:uppercase;
+    width:100%;
     a{
       color:#267FF9;
       display:inline-block;
@@ -1282,10 +1281,103 @@ body{
   }
 }
 @media screen and (min-width:1200px){
+  .slick-slide img{
+    cursor:pointer;
+  }
+  .image-wiev-block{
+    display:none;
+    width:100%;
+    height:100%;
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:100;
+    .photo-view{
+      display:block;
+      position:relative;
+      height:728px;
+      width:1040px;
+      top:21%;
+      bottom:79%;
+      margin:0 auto;
+    }
+    .close-btn{
+      cursor:pointer;
+      position:absolute;
+      width:24px;
+      height:24px;
+      right:12px;
+      top:15px;
+      background:url(../static/view-image-close-btn.svg) no-repeat center;
+    }
+    .prev-btn-block{
+      position:absolute;
+      cursor:pointer;
+      width:88px;
+      height:904px;
+      left:0;
+      top:13%;
+      &:hover{
+        background-color:rgba(9, 26, 50, 0.25);
+      }
+      .prev-image{
+        display:block;
+        position:absolute;
+        left:32px;
+        top:48%;
+      }
+    }
+    .next-btn-block{
+      position:absolute;
+      cursor:pointer;
+      width:88px;
+      height:904px;
+      right:0;
+      top:13%;
+      &:hover{
+        background-color:rgba(9, 26, 50, 0.25);
+      }
+      .next-image{
+        display:block;
+        position:absolute;
+        right:32px;
+        top:48%;
+        transform:rotate(180deg);
+      }
+    }
+    .images-counter{
+      position:relative;
+      background:rgba(9, 26, 50, 0.35);
+      border-radius:4px;
+      height:42px;
+      width: 72px;
+      margin:0 auto;
+      top:22%;
+      .image-counter-value{
+        position: relative;
+        top: 26.19%;
+        bottom: 26.19%;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 20px;
+        display: flex;
+        align-items: center;
+        color: #FFFFFF;
+        opacity: 0.85;
+        flex: none;
+        order: 0;
+        align-self: center;
+        justify-content: center;
+        margin: 10px 0px;
+      }
+    }
+  }
   .pravoe-ukho{
-    position: relative;
-    height: 0px;
-    width: 0px;
+    position:relative;
+    height:0px;
+    width:0px;
     margin:0 auto;
   }
   body{
@@ -1642,30 +1734,30 @@ body{
     }
     .title{
       &:before{
-        display: inline-block;
-        content: '';
-        background-image: linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
+        display:inline-block;
+        content:'';
+        background-image:linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
         width:16px;
       }
       &:after{
-        display: inline-block;
-        content: '';
-        background-image: linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
+        display:inline-block;
+        content:'';
+        background-image:linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
         width:16px;
       }
-      background-image: linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
-      color: rgba(47, 72, 106, 0.24);
+      background-image:linear-gradient(#fafbfc00, #fafbfc, #fafbfc);
+      color:rgba(47, 72, 106, 0.24);
       font-size:26px;
       font-weight:600;
       justify-content:center;
       line-height:32px;
-      margin: 0 auto;
-      padding: 12px 0px;
-      position: relative;
-      z-index: -1;
-      display: flex;
-      white-space: nowrap;
-      width: max-content;
+      margin:0 auto;
+      padding:12px 0px;
+      position:relative;
+      z-index:-1;
+      display:flex;
+      white-space:nowrap;
+      width:max-content;
     }
   }
   .help-icon{
@@ -1718,7 +1810,7 @@ body{
     background:#FFFFFF;
     border-radius:8px;
     box-shadow:0 -2px 1px rgba(85, 89, 106, 0.0196802), 0 2px 1px rgba(85, 89, 106, 0.0196802), 0 4px 2px rgba(85, 89, 106, 0.0282725), 0 6px 4px rgba(85, 89, 106, 0.035), 0 8px 8px rgba(85, 89, 106, 0.0417275), 0 18px 16px rgba(85, 89, 106, 0.0503198), 0 30px 40px rgba(85, 89, 106, 0.07);
-    height: 332px;
+    height:332px;
     margin-bottom:32px;
     position:relative;
     width:960px;
@@ -1733,7 +1825,7 @@ body{
         font-weight:bold;
         line-height:32px;
         position:relative;
-        height: 32px;
+        height:32px;
       }
       .contacts{
         display:inline-block;
@@ -1825,7 +1917,7 @@ body{
       height:90px;
       position:absolute;
       right:14px;
-      top:206px;
+      top:222px;
       width:64px;
     }
   }
@@ -1879,19 +1971,18 @@ body{
             color:#FFFFFF;
             width:100%;
             &::placeholder{
-              display: block;
+              display:block;
               font-weight:500;
               font-size:14px;
               line-height:32px;
               color:#99c4ff;
             }
             &:-moz-placeholder{
-              display: block;
+              display:block;
               font-weight:500;
               font-size:14px;
               line-height:32px;
               color:#99c4ff;
-
             }
           }
         }
@@ -1941,7 +2032,6 @@ body{
             align-items:center;
             text-align:center;
             margin-left:4px;
-
             color:#FFFFFF;
           }
           .promo-cross{
@@ -2076,7 +2166,7 @@ body{
           position:relative;
           top:80px;
           width:423px;
-          left: -47px;
+          left:-47px;
           .month-list-decorate{
             background:#FAFBFC;
             border-radius:8px 8px 0 0;
