--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1311,6 +1311,13 @@ body{
       background:url(../static/view-image-close-btn.svg) no-repeat center;
     }
     .prev-btn-block{
+      -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+      -khtml-user-select: none; /* Konqueror HTML */
+      -moz-user-select: none; /* Old versions of Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+      user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
       position:absolute;
       cursor:pointer;
       width:88px;
@@ -1328,6 +1335,13 @@ body{
       }
     }
     .next-btn-block{
+      -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+      -khtml-user-select: none; /* Konqueror HTML */
+      -moz-user-select: none; /* Old versions of Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+      user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
       position:absolute;
       cursor:pointer;
       width:88px;
