--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1295,8 +1295,8 @@ body{
     .photo-view{
       display:block;
       position:relative;
-      height:60%;
-      top:21%;
+      height:60vh;
+      top:21vh;
       margin:0 auto;
     }
     .close-btn{
