--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -43,6 +43,7 @@ body{
   z-index:10;
   top:0px;
   left:0px;
+  -moz-transform: scale(1.25,2.3);
 }
 .clear-href{
   text-decoration:none;
@@ -1287,7 +1288,6 @@ body{
   .image-wiev-block{
     display:none;
     width:100%;
-    height:100%;
     position:fixed;
     top:0;
     left:0;
@@ -1296,7 +1296,7 @@ body{
       display:block;
       position:relative;
       height:80vh;
-      top:21vh;
+      padding-top:21vh;
       margin:0 auto;
     }
     .close-btn{
@@ -1319,9 +1319,9 @@ body{
       position:absolute;
       cursor:pointer;
       width:88px;
-      height:75%;
+      height:95%;
       left:0;
-      top:13%;
+      top:11%;
       &:hover{
         background-color:rgba(9, 26, 50, 0.25);
       }
@@ -1343,9 +1343,9 @@ body{
       position:absolute;
       cursor:pointer;
       width:88px;
-      height:75%;
+      height:95%;
       right:0;
-      top:13%;
+      top:11%;
       &:hover{
         background-color:rgba(9, 26, 50, 0.25);
       }
