--- a/src/style/popup-select-guest.scss
+++ b/src/style/popup-select-guest.scss
@@ -288,7 +288,7 @@
         order:0;
         position:static;
         top:6px;
-        width:116px;
+        /*width:116px;*/
       }
     }
     .button-2{
