--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,6 +13,19 @@ textarea{
     color:rgba(47, 72, 106, 0.5);
   }
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  display: none;
+  margin: 0;
+  padding: 0;
+  width: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 body{
   font-family:Inter;
   font-style:normal;
