--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,39 +15,37 @@ textarea{
 }
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  display: none;
-  margin: 0;
-  padding: 0;
-  width: 0;
+input::-webkit-inner-spin-button{
+  display:none;
+  margin:0;
+  padding:0;
+  width:0;
 }
-
 /* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
+input[type=number]{
+  -moz-appearance:textfield;
 }
 body{
   font-family:Inter;
   font-style:normal;
   font-weight:normal;
 }
-.input,.textarea{
+.input, .textarea{
   &:hover{
-    border: 1px solid rgba(47, 72, 106, 0.5)!important;
+    border:1px solid rgba(47, 72, 106, 0.5) !important;
   }
   &.active{
-    border: 1px solid #267FF9!important;
+    border:1px solid #267FF9 !important;
     .caption{
-      color:#267FF9!important;
+      color:#267FF9 !important;
     }
   }
   &.error{
-    border: 1px solid #E03535!important;
+    border:1px solid #E03535 !important;
     .caption{
-      color:#E03535!important;
+      color:#E03535 !important;
     }
   }
-
 }
 @import "slick.path";
 @import "popup-select-guest";
@@ -76,12 +74,13 @@ body{
   background:rgba(29, 42, 61, 0.85);
   width:100%;
   height:100%;
-  position:fixed;
+  position:absolute;
   z-index:10;
   top:0px;
   left:0px;
-  -moz-transform:scale(1.25, 2.3);
+  -moz-transform:scale(1.25, 1.25);
 }
+
 .clear-href{
   text-decoration:none;
 }
@@ -651,10 +650,9 @@ body{
           width:423px;
           -moz-transform:scale(0.85);
           transform-origin:50% 0;
-          -moz-transform-origin: 100% 0;
+          -moz-transform-origin:100% 0;
           z-index:1;
           zoom:85%;
-
           right:-5%;
           .month-list-decorate{
             background:#FAFBFC;
@@ -1540,6 +1538,12 @@ body{
     width:0px;
     margin:0 auto;
   }
+  html{
+
+    -moz-transform:scale(0.8);
+    transform-origin:50% 0;
+    zoom:80%;
+  }
   body{
     --zoom:0.8;
     background:#FAFBFC;
@@ -1549,9 +1553,6 @@ body{
     font-weight:normal;
     margin:0;
     padding:0;
-    -moz-transform:scale(0.8);
-    transform-origin:50% 0;
-    zoom:80%;
   }
   .rectangle-top{
     @include main-block;
