--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -87,7 +87,7 @@ body{
 @media screen and (max-width:1199px){
   .mobile-tooltip-block{
     position: absolute;
-    display: block;
+    display: none;
     top: 0;
     left: 0;
     width: 100%;
